--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
     };
   </script>
   <style>
+    ::-webkit-scrollbar {
+      width: 7px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: white;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #00BAF2;
+      border-radius: 15px;
+    }
+
     .product{
       position: relative;
       overflow: hidden;
