--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
     </div>
   </div>
 
+  <!-- Build Long-term Wealth  -->
   <div
     class="flex flex-col sm:flex-row bg-lightblack items-center justify-between w-full h-full  
     sm:h-[550px] lg:h-[650px] relative mt-20 pb-[70px] pl-[20px] md:pl-[50px] pt-[50px] pr-[20px] md:pr-[50px] font-roboto">
@@ -412,7 +413,7 @@
   </div>
 
 
-
+<!-- Insurance made easy. -->
   <div
     class="bg-white flex flex-col-reverse sm:flex-row justify-between items-center pb-[70px] pl-[20px] sm:pl-[50px] pt-[80px] pr-[20px] sm:pr-[50px] font-roboto">
     <div class="w-full sm:w-1/2 p-[20px]">
@@ -430,6 +431,7 @@
     </div>
   </div>
 
+<!-- Get a Personal Loan -->
 
   <div
     class="bg-smalldarkwhite flex flex-col sm:flex-row items-center justify-between pb-[100px] pl-[20px] sm:pl-[50px] pt-[100px] pr-[20px] sm:pr-[50px] font-roboto ">
@@ -492,27 +494,27 @@
         <img class="w-[200px] xl:w-[250px] " src="./image/pos-billing.png" alt="">
         <h1 class="font-medium text-2xl lg:text-3xl mt-5 ">POS Billing Software</h1>
         <p class="mt-10 font-medium text-base lg:text-xl"> Say Hello to Smart Retail Business Management</p>
-        <button class="mt-5 font-medium">Learn More</button>
+        <button class="mt-5 font-medium text-myblue">Learn More</button>
       </div>
 
       <div class="w-[200px] xl:w-[250px]  ">
         <img class="w-[200px] xl:w-[250px] " src="./image/business-app.png" alt="">
         <h1 class="font-medium text-2xl lg:text-3xl mt-5">Paytm for Business App</h1>
         <p class="mt-10 font-medium text-base lg:text-xl">Everything you need to manage your business on your phone</p>
-        <button class="mt-5 font-medium">Learn More</button>
+        <button class="mt-5 font-medium text-myblue">Learn More</button>
       </div>
       <div class="w-[200px] xl:w-[250px]  ">
         <img class="w-[200px] xl:w-[250px] " src="./image/add-on-paytm.png" alt="">
         <h1 class="font-medium text-2xl lg:text-3xl mt-5">Advertise on Paytm</h1>
         <p class="mt-10 font-medium text-base lg:text-xl ">Grow your business by advertising on India’s largest mobile
           business</p>
-        <button class="mt-5 font-medium">Learn More</button>
+        <button class="mt-5 font-medium text-myblue">Learn More</button>
       </div>
       <div class="w-[200px] xl:w-[250px]  ">
         <img class="w-[200px] xl:w-[250px] " src="./image/business-khata.png" alt="">
         <h1 class="font-medium text-2xl lg:text-3xl mt-5">Business <br>Khata</h1>
         <p class="mt-10 font-medium text-base lg:text-xl">Managing Khata made easy</p>
-        <button class="mt-5 font-medium">Learn More</button>
+        <button class="mt-5 font-medium text-myblue">Learn More</button>
       </div>
     </div>
   </div>
